[tool.poetry]
name = "routEar"
version = "0.0.1"
description = "Receives JSON data from router to notify the user (Through Desktop Notification) about various network information."
authors = ["Mahir Labib Chowdhury <optical.mahir@gmail.com>"]
readme = "README.md"
repository = "https://github.com/m4hi2/routEar"
license = "MIT"
packages = [
    {include = "routEar"}
]

[tool.poetry.dependencies]
python = ">=3.5"
Flask = "^1.1.2"

pywin32 = {version = "300", platform = "win32"}

win10toast = {version = "^0.9", platform = "win32"}
pydbus = { version = "^0.6", platform = "linux"}
pync = {version = "^2.0.3", platform = "darwin"}

[tool.poetry.scripts]
routEar = "routEar.__main__:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
